# MarketSignal

./: .gitignore  .gitmodules  CMakeLists.txt
pythonYFinance/: findTheTopX.py  generateBiggestTickerMovers.py  generateConsistentTickerPerfomance.py  generateLogTickerMovers.py  main.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  RSSFetcher.cpp  RSSFetcher.h  expansion_idea.txt  file_reader.cpp  file_reader.h  structs.h
